--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hi, I am Kamalesh</h1>
+    <p>I wanted to be full stack developer and the data scientist</p>
 </body>
 </html>
